--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Ed's Tech Tips
-description: Bookmark this to keep stay updated on my thoughts! :)
+title: Eds Tech Tips
+description: I am a graduate from Kean University with a Bachelor of Science in Computer Science. I have also acquired my CompTIA Security+ Certificate. I am interested in learning about Cyber Security, and will be documenting everything here.
