--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Eds_Tech_Tips
-description: I am a graduate from Kean University with a Bachelor of Science in Computer Science. I have also acquired my CompTIA Security+ Certificate. I am interested in learning about Cyber Security, and will be documenting everything here.
+description: follow as i document my interests about everything. i hope you enjoy :)
