--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Eds_Tech_Tips
+title: 44656570657220507572706f7365
 description: follow as i document my interests about everything. i hope you enjoy :)
