--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: 44656570657220507572706f7365
-description: follow as i document my interests about everything. i hope you enjoy :)
+description: follow as i posts what im working on before i stop working on it
